--- a/005_LMS_Exploration_SO3/03/03.09-12, 랭킹을 올리고 싶다면? (revisited).ipynb
+++ b/005_LMS_Exploration_SO3/03/03.09-12, 랭킹을 올리고 싶다면? (revisited).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b45c11a1",
+   "id": "628c97ef",
    "metadata": {},
    "source": [
     "Exploration 3의 두번째 소주제로 넘어왔다.\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "994a4aae",
+   "id": "ab15da25",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a663335",
+   "id": "76a5db30",
    "metadata": {},
    "source": [
     "## 3.9. (1) 다시 한 번, 내 입맛대로 데이터 준비하기"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5427d3",
+   "id": "a0dbff80",
    "metadata": {},
    "source": [
     "- 03.09-12와 비슷하게 데이터를 불러온다.\n",
@@ -70,7 +70,7 @@
     "- `'date'`열의 값을 최초 6자리만 잘라내는 것은 기존과 동일하나, data type을 `int`로 바꾸었다.\n",
     "이것은 중요하다.\n",
     "그러니까, 03.09-12에서는 data type이 `str`이었던 것이다.\n",
-    "03.09-12에서 사용한 모델이 어떤 모델인지 정확히 모르겠어서 정확하게 말할 수는 없겠지만, 기존까지는 '201410'와 같은 데이터를 숫자가 아닌 문자열로 판단하고 있었다.\n",
+    " 03.09-12에서 사용한 모델이 어떤 모델인지 정확히 모르겠어서 정확하게 말할 수는 없겠지만, 기존까지는 '201410'와 같은 데이터를 숫자가 아닌 문자열로 판단하고 있었다.\n",
     "이것을 숫자로 인식하는 것은 상당한 도움이 될 수 있겠다.\n",
     "- `train`에서 label에 해당하는 `pd.Series`는 따로 떼어내서 `y`에 할당한다.\n",
     "또한, `train`의 label 열을 없애니, `train`과 `test`의 feature의 개수가 20개로 같아졌다.\n",
@@ -86,8 +86,8 @@
     "|(없음)   |test dataset, label      |           ||\n",
     "\n",
     "- 수치적인 전처리의 첫단계를 진행한 후 다음 subsection으로 넘어가게 된다.\n",
-    "여기서 말하는 첫단계란, `y`에 $y=\\log(1+x)$를 적용하는 것이다.\n",
-    "03.09-12에서는 feature들에만 $y=\\log(1+x)$를 적용했었는데 이번에는 `y`에 적용시킨 것이다.\n",
+    " 여기서 말하는 첫단계란, `y`에 $y=\\log(1+x)$를 적용하는 것이다.\n",
+    " 03.09-12에서는 feature들에만 $y=\\log(1+x)$를 적용했었는데 이번에는 `y`에 적용시킨 것이다.\n",
     "이때 상당히 신중해야 한다.\n",
     "로그변환을 적용시킨 `y`는 학습 시에 사용되게 된다.\n",
     "그러면, 학습된 모델은 그 *로그변환이 적용되었다고 가정된* 예측치 `y_pred_logscaled`(가제)를 출력하게 된다.\n",
@@ -95,13 +95,13 @@
     "\n",
     "- 여기에서 전처리과정은 끝난다.\n",
     "03.09-12에서 여러 feature에 대한 전처리과정이 있었던 것과 상반된다.\n",
-    "그러니까, 실제 submit project에서는 "
+    "그러니까, 실제 submit project에서는 feature에 대한 logscale 전처리과정이 필요할 것이다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf135b5e",
+   "id": "687d2030",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5b3a8dd1",
+   "id": "7970c559",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2dd08c11",
+   "id": "a3ee92bc",
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "552b5f07",
+   "id": "468a2b34",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ab5444cd",
+   "id": "e45ba1dd",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de831776",
+   "id": "9eed1a1a",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d1177d76",
+   "id": "4bb608a8",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c343a57",
+   "id": "58de13c8",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a234f7db",
+   "id": "c60b4864",
    "metadata": {},
    "outputs": [
     {
@@ -698,8 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9bf3ac75",
+   "execution_count": 11,
+   "id": "788d1557",
    "metadata": {
     "scrolled": true
    },
@@ -710,7 +710,7 @@
        "<AxesSubplot:xlabel='price', ylabel='Density'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -733,8 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a4df5752",
+   "execution_count": 12,
+   "id": "2bb6888f",
    "metadata": {
     "scrolled": true
    },
@@ -756,7 +756,7 @@
        "Name: price, Length: 15035, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e8cc0c94",
+   "execution_count": 13,
+   "id": "72905856",
    "metadata": {},
    "outputs": [
     {
@@ -792,8 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fe689f3e",
+   "execution_count": 14,
+   "id": "baea9809",
    "metadata": {
     "scrolled": true
    },
@@ -837,8 +837,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "9f5ebe66",
+   "execution_count": 15,
+   "id": "f4af9e66",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341db82a",
+   "id": "daabb8c2",
    "metadata": {},
    "source": [
     "## 3.10. (2) 다양한 실험을 위해 함수로 만들어 쓰자"
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a86085",
+   "id": "f69c61eb",
    "metadata": {},
    "source": [
     "- 이 subsection은 03.04-08에서 '(4) 모델설계'에 해당하는 부분이다.\n",
@@ -889,7 +889,7 @@
     "  - 지금의 이 코드는 그다지 중요한 코드가 아니다.\n",
     "  그냥, `models`, `train`, `y`가 주어졌을 때, 'RMSE'를 출력하는 함수를 하나 만들었을 뿐이다.\n",
     "  다음 subsection에서는 `GridSearchCV`를 사용하게 되는데 이때에는 train/validation/test split이 아니라, (다시) cross validation을 사용하게 되며, 따라서 현재의 이 코드는 여기에서만 쓰일 뿐이다.\n",
-    "  다만 다음 subsection에서는 ensemble을 쓰는 것이 아닌, 단일한 모델을 사용하고 있으므로 여기의 코드를 조금 변형해서 다음 section의 코드에 적용시켜야 할 것이다.\n",
+    "  다만 다음 subsection에서는 ensemble을 쓰는 것이 아닌, 단일한 모델을 사용하고 있으므로 여기의 코드를 조금 변형해서 다음 subsection의 코드에 적용시켜야 할 것이다.\n",
     "  \n",
     "<!--   |03.04-08| →|03.09-12||| -->\n",
     "  |객체명  |   |객체명   |설명                       |shape|\n",
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "610d7775",
+   "id": "3c95d1b1",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eebf6c5b",
+   "id": "e8829a20",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a2ed358b",
+   "id": "aef6b68b",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "57549a47",
+   "id": "f017202f",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cd9108c4",
+   "id": "3f1b0c62",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2f57cc01",
+   "id": "4ecd52df",
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "db28a44d",
+   "id": "6cd02156",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1dda3c0",
+   "id": "8e63f93e",
    "metadata": {},
    "source": [
     "## 3.11. (3) 하이퍼 파라미터 튜닝의 최강자, 그리드 탐색"
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf1166f",
+   "id": "b7c52c75",
    "metadata": {},
    "source": [
     "- hyperparameter tuning을 진행한다.\n",
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e1010bd6",
+   "id": "910c4f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ed3de4b6",
+   "id": "f41d7a23",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16fb8d4f",
+   "id": "b255b385",
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f5ab12fa",
+   "id": "685231ed",
    "metadata": {
     "scrolled": true
    },
@@ -1258,10 +1258,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.51698785, 0.64697418, 1.1126019 , 1.63299327]),\n",
-       " 'std_fit_time': array([0.0572835 , 0.09127882, 0.10737858, 0.06529215]),\n",
-       " 'mean_score_time': array([0.03186522, 0.05228906, 0.0786829 , 0.07566638]),\n",
-       " 'std_score_time': array([0.01382029, 0.01276374, 0.01300696, 0.03562635]),\n",
+       "{'mean_fit_time': array([0.56775341, 0.77186303, 1.3682622 , 2.16028228]),\n",
+       " 'std_fit_time': array([0.03398066, 0.02368444, 0.06024762, 0.13449295]),\n",
+       " 'mean_score_time': array([0.04582787, 0.05187764, 0.09607368, 0.12079377]),\n",
+       " 'std_score_time': array([0.01575915, 0.01366466, 0.02954531, 0.03401748]),\n",
        " 'param_max_depth': masked_array(data=[1, 1, 10, 10],\n",
        "              mask=[False, False, False, False],\n",
        "        fill_value='?',\n",
@@ -1295,8 +1295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a04a3b84",
+   "execution_count": 27,
+   "id": "9b9c6ba4",
    "metadata": {
     "scrolled": true
    },
@@ -1369,7 +1369,7 @@
        "0          1            50 -0.073394  0.270914"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,8 +1383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f3b7494b",
+   "execution_count": 28,
+   "id": "1fd9e63b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63ed636",
+   "id": "70ebd63f",
    "metadata": {},
    "source": [
     "## 3.12. (4) 제출하는 것도, 빠르고 깔끔하게!"
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c3fee5",
+   "id": "1c870577",
    "metadata": {},
    "source": [
     "- `my_GridSearch` 함수를 적용하여 괜찮은 hyperparameter들의 조합을 추출한다.\n",
@@ -1434,8 +1434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e68d4fc4",
+   "execution_count": 29,
+   "id": "efe449da",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
        "0          1            50 -0.073394  0.270914"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,8 +1530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "12bef125",
+   "execution_count": 30,
+   "id": "40901463",
    "metadata": {
     "scrolled": true
    },
@@ -1543,7 +1543,7 @@
        "       12.69894979, 12.96297768])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,8 +1557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "55eb7c55",
+   "execution_count": 31,
+   "id": "82a3afc0",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
        "        449515.92243642,  327402.87855805,  426332.71354302])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,8 +1580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "6d6fd4f8",
+   "execution_count": 32,
+   "id": "3096d9ab",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
        "4  15039  100000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,8 +1663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "185ddc60",
+   "execution_count": 33,
+   "id": "d144c1a4",
    "metadata": {},
    "outputs": [
     {
@@ -1683,8 +1683,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "3f6eb473",
+   "execution_count": 35,
+   "id": "350e92ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,6 +1699,24 @@
     "    submission_csv_path = '{}/submission_{}_RMSLE_{}.csv'.format(data_dir, model_name, rmsle)\n",
     "    submission.to_csv(submission_csv_path, index=False)\n",
     "    print('{} saved!'.format(submission_csv_path))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a2f9ec5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/aiffel/aiffel/kaggle_kakr_housing/data/submission_lgbm_RMSLE_0.0168.csv saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_submission(model, train, y, test, 'lgbm', rmsle='0.0168')"
    ]
   }
  ],
