--- a/005_LMS_Exploration_SO3/03.13.submit_the_project_1st_trial.ipynb
+++ b/005_LMS_Exploration_SO3/03.13.submit_the_project_1st_trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4b367eb",
+   "id": "86f87717",
    "metadata": {},
    "source": [
     "여기에서는 첫번째로 프로젝트를 실험해본다.\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e988d636",
+   "id": "71a9b381",
    "metadata": {},
    "source": [
     "## 3.13. 프로젝트 : This is your playground! Leaderboard를 정복해 주세요!"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba77c109",
+   "id": "c349574e",
    "metadata": {},
    "source": [
     "### 3.13.1. 모듈 불러오기 및 파일 불러오기"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66ef6650",
+   "id": "c1f065a4",
    "metadata": {},
    "source": [
     "- 필요한 모듈들을 전부 불러왔다.\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a590070",
+   "id": "423d73a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4208d3e9",
+   "id": "f7ed4f9c",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2b04e400",
+   "id": "eb1361dc",
    "metadata": {
     "scrolled": true
    },
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c126126f",
+   "id": "65c69a43",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f86833d",
+   "id": "e995daa9",
    "metadata": {},
    "source": [
     "### 3.13.2. 데이터 전처리"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "102527a5",
+   "id": "ccdc71d5",
    "metadata": {},
    "source": [
     "- 3.6. (3), 3.9. (1)의 전처리 과정을 통합했다.\n",
@@ -192,7 +192,7 @@
     "결측치가 없다는 건 알고 있지만, 그래도 확인하기 위한 형식적인 절차이다.\n",
     "- 두번째 전처리로서, `id` 열을 제거한다.\n",
     "어차피 다음 subsection부터는 3.9. (1)을 따라갈 예정이어서 `sub_id`는 필요없을 것 같지만, 혹시 몰라서 지우지 않았다.\n",
-    "- 세번째 전처리로서, `data` 열의 문자열을 '연도+월'까지만 자른 뒤 `int`의 형태로 바꿔주었다.\n",
+    "- 세번째 전처리로서, `date` 열의 문자열을 '연도+월'까지만 자른 뒤 `int`의 형태로 바꿔주었다.\n",
     "- 네번째 전처리로서, log 변환을 해주었다.\n",
     "feature(`data`)를 변환하는 것은 3.6. (3)을 따랐고, label(`y`)를 변환하는 것은 3.9. (1)을 따랐다.\n",
     "- 다섯번째 전처리로서, train / test를 나누었다.`data` 객체를 `train`과 `test`로 나누었다.\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3235229",
+   "id": "e63f51b5",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "86467f8b",
+   "id": "92364b50",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5cfc3f3e",
+   "id": "c42aaa72",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67c9b631",
+   "id": "9d95f97e",
    "metadata": {
     "scrolled": true
    },
@@ -319,9 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "19ae7244",
+   "id": "d8239d35",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "873e379c",
+   "id": "98963ca4",
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5c1540a0",
+   "id": "c64eaac8",
    "metadata": {
     "scrolled": true
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fa76e193",
+   "id": "417829eb",
    "metadata": {
     "scrolled": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f27f5851",
+   "id": "42500df2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8cbde3f2",
+   "id": "5deb73d4",
    "metadata": {
     "scrolled": true
    },
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8fa36f21",
+   "id": "2e1a36aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5a76d83d",
+   "id": "353521bb",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a696eac5",
+   "id": "0f434cf4",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ccacdff1",
+   "id": "984eeec6",
    "metadata": {
     "scrolled": false
    },
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b868855",
+   "id": "ac7e8c95",
    "metadata": {},
    "source": [
     "`train`과 `test`의 분포가 거의 identically distributed 임을 알 수 있다."
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "02e16f73",
+   "id": "37704b4b",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9d915a",
+   "id": "6f551ce5",
    "metadata": {},
    "source": [
     "### 3.13.3. 모델 구성하기, `GridSearchCV`, 저장하기"
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9bca73",
+   "id": "d5644f06",
    "metadata": {},
    "source": [
     "- 핵심이 되는 것은 `my_GridSearch` 함수와 `save_submission` 함수이다.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5f2c1d11",
+   "id": "acdba17d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "bfdc8749",
+   "id": "81407c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0d7c144a",
+   "id": "08a490e5",
    "metadata": {},
    "outputs": [
     {
@@ -1450,8 +1450,7 @@
     "model = LGBMRegressor(max_depth=10, n_estimators=100, random_state=random_state)\n",
     "param_grid = {\n",
     "    'max_depth': [1, 5, 10, 20],\n",
-    "    'n_estimators': [10, 50, 100, 150, 200],\n",
-    "}\n",
+    "    'n_estimators': [10, 50, 100, 150, 200],}\n",
     "results = my_GridSearch(model, train, y, param_grid, verbose=1, n_jobs=5)\n",
     "results"
    ]
@@ -1459,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "855ea8c8",
+   "id": "4ada21a9",
    "metadata": {
     "scrolled": true
    },
