--- a/004_articles_and_materials/0901_matplotlib_2021_1015_matplotlib/matplotlib_tutorial.ipynb
+++ b/004_articles_and_materials/0901_matplotlib_2021_1015_matplotlib/matplotlib_tutorial.ipynb
@@ -1686,7 +1686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -1704,7 +1704,7 @@
     "width": "305px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
