--- a/005_LMS_Exploration_SO3/06. 작사가 인공지능 만들기_4.ipynb
+++ b/005_LMS_Exploration_SO3/06. 작사가 인공지능 만들기_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba23ca08",
+   "id": "8ab48069",
    "metadata": {},
    "source": [
     "## 모듈 불러오기"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c746ac18",
+   "id": "279ee141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950ed6d7",
+   "id": "7a53da65",
    "metadata": {},
    "source": [
     "### Step 1. 데이터 다운로드"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a622af46",
+   "id": "9768a96c",
    "metadata": {},
    "source": [
     "### Step 2. 데이터 읽어오기"
@@ -41,18 +41,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12a62a11",
+   "id": "0bc3abcc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_file_path = '../data/exploration_06/data/lyrics/*'\n",
+    "txt_file_path = '../../data/exploration_06/lyrics/*'\n",
     "txt_list = glob.glob(txt_file_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "661b5157",
+   "id": "a962747a",
    "metadata": {},
    "outputs": [
     {
@@ -60,9 +60,9 @@
      "output_type": "stream",
      "text": [
       "49\n",
-      "['../data/exploration_06/data/lyrics/lin-manuel-miranda.txt'\n",
-      " '../data/exploration_06/data/lyrics/bob-marley.txt'\n",
-      " '../data/exploration_06/data/lyrics/lil-wayne.txt']\n"
+      "['../../data/exploration_06/lyrics/lin-manuel-miranda.txt'\n",
+      " '../../data/exploration_06/lyrics/bob-marley.txt'\n",
+      " '../../data/exploration_06/lyrics/lil-wayne.txt']\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "74cce85c",
+   "id": "3a1d47cf",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4921068",
+   "id": "516e03d2",
    "metadata": {},
    "source": [
     "### Step 3. 데이터 정제"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "015cf3f3",
+   "id": "4e9ee1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bdce629",
+   "id": "bea16259",
    "metadata": {
     "scrolled": true
    },
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "345dd165",
+   "id": "93c70386",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a71d88aa",
+   "id": "ccefb9cd",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c6f2ab7",
+   "id": "b9119205",
    "metadata": {},
    "source": [
     "### Step 4. 평가 데이터셋 분리"
@@ -213,46 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b24e0a9a",
+   "execution_count": null,
+   "id": "f1e67128",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[list([2, 78, 626, 9, 4376, 4, 5629, 4, 611, 19, 9, 3293, 3])\n",
-      " list([2, 8, 9, 1, 4, 1372, 14, 6, 881, 19, 9, 1974, 808, 14, 6, 4179, 122, 1, 1, 4, 3])\n",
-      " list([2, 14, 1, 4, 831, 29, 10, 27, 9, 2040, 8, 9, 1, 43, 6, 743, 1128, 1, 635, 258, 9, 635, 3])]\n",
-      "347\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_413/668456425.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  print(np.array(tensor)[:3])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "[[   2   78  626    9 4376    4 5629    4  611   19    9 3293    3    0\n",
-      "     0]\n",
-      " [   2    8    9    1    4 1372   14    6  881   19    9 1974  808   14\n",
-      "     6]\n",
-      " [   2   14    1    4  831   29   10   27    9 2040    8    9    1   43\n",
-      "     6]]\n",
-      "(175749, 15)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = tf.keras.preprocessing.text.Tokenizer(\n",
     "    num_words=7000, filters=' ', oov_token=\"<unk>\")\n",
@@ -270,28 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d69af031",
+   "execution_count": null,
+   "id": "65acb16d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "175749\n",
-      "(175749, 15)\n",
-      "<start> how does a bastard , orphan , son of a whore <end>\n",
-      "<start> and a scotsman , dropped in the middle of a forgotten spot in the caribbean by providence impoverished , <end>\n",
-      "<start> in squalor , grow up to be a hero and a scholar ? the ten dollar founding father without a father <end>\n",
-      "[   2   78  626    9 4376    4 5629    4  611   19    9 3293    3    0\n",
-      "    0]\n",
-      "[   2    8    9    1    4 1372   14    6  881   19    9 1974  808   14\n",
-      "    6]\n",
-      "[   2   14    1    4  831   29   10   27    9 2040    8    9    1   43\n",
-      "    6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(corpus))\n",
     "print(tensor.shape) #24015개의 문장, 각 문장은 21차원의 벡터\n",
@@ -310,7 +258,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cb602a2c",
+   "id": "12fa0446",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -318,19 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9225e077",
+   "execution_count": null,
+   "id": "ee2f787f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   2   78  626    9 4376    4 5629    4  611   19    9 3293    3    0]\n",
-      "[  78  626    9 4376    4 5629    4  611   19    9 3293    3    0    0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "src_input = tensor[:, :-1]  \n",
     "tgt_input = tensor[:, 1:]    \n",
@@ -340,21 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "aeb05501",
+   "execution_count": null,
+   "id": "476781c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BUFFER_SIZE : 175749\n",
-      "BATCH_SIZE : 256\n",
-      "steps_per_epoch : 686\n",
-      "VOCAB_SIZE : 7001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "BUFFER_SIZE = len(src_input)\n",
     "print('BUFFER_SIZE :',BUFFER_SIZE)\n",
@@ -368,21 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6089bde0",
+   "execution_count": null,
+   "id": "313b8b45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(175749, 2, 14)\n",
-      "(175749, 2, 14)\n",
-      "(686, 2, 256, 14)\n",
-      "<BatchDataset shapes: ((256, 14), (256, 14)), types: (tf.int32, tf.int32)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = tf.data.Dataset.from_tensor_slices((src_input, tgt_input))\n",
     "dataset_as_np_array = np.array([data for data in dataset])\n",
@@ -398,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab4053a",
+   "id": "82ca2cf9",
    "metadata": {},
    "source": [
     "### Step 5. 인공지능 만들기"
@@ -406,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "71764c42",
+   "execution_count": null,
+   "id": "d7548414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,8 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b6d1c011",
+   "execution_count": null,
+   "id": "1fbe56a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,21 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "2b0b43fe",
+   "execution_count": null,
+   "id": "2c73a1a5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([256, 14, 7001])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for src_sample, tgt_sample in dataset.take(1): break\n",
     "prd_sample = model(src_sample)\n",
@@ -465,43 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "324f7ce1",
+   "execution_count": null,
+   "id": "22ab7a53",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"text_generator\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "embedding (Embedding)        multiple                  1792256   \n",
-      "_________________________________________________________________\n",
-      "lstm (LSTM)                  multiple                  5246976   \n",
-      "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                multiple                  8392704   \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                multiple                  7176025   \n",
-      "=================================================================\n",
-      "Total params: 22,607,961\n",
-      "Trainable params: 22,607,961\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d58fb2e5",
+   "execution_count": null,
+   "id": "dfa916d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,79 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "4b1a090c",
+   "execution_count": null,
+   "id": "ced15ab4",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/30\n",
-      "686/686 [==============================] - 94s 134ms/step - loss: 3.5286\n",
-      "Epoch 2/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 3.0585\n",
-      "Epoch 3/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.8722\n",
-      "Epoch 4/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.7348\n",
-      "Epoch 5/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.6203\n",
-      "Epoch 6/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.5185\n",
-      "Epoch 7/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.4243\n",
-      "Epoch 8/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.3356\n",
-      "Epoch 9/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.2504\n",
-      "Epoch 10/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.1676\n",
-      "Epoch 11/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.0880\n",
-      "Epoch 12/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 2.0107\n",
-      "Epoch 13/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.9360\n",
-      "Epoch 14/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.8646\n",
-      "Epoch 15/30\n",
-      "686/686 [==============================] - 95s 139ms/step - loss: 1.7952\n",
-      "Epoch 16/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.7289\n",
-      "Epoch 17/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.6657\n",
-      "Epoch 18/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.6058\n",
-      "Epoch 19/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.5492\n",
-      "Epoch 20/30\n",
-      "686/686 [==============================] - 92s 133ms/step - loss: 1.4962\n",
-      "Epoch 21/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.4461\n",
-      "Epoch 22/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.3992\n",
-      "Epoch 23/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.3564\n",
-      "Epoch 24/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.3157\n",
-      "Epoch 25/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.2783\n",
-      "Epoch 26/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.2437\n",
-      "Epoch 27/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.2116\n",
-      "Epoch 28/30\n",
-      "686/686 [==============================] - 92s 133ms/step - loss: 1.1828\n",
-      "Epoch 29/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.1557\n",
-      "Epoch 30/30\n",
-      "686/686 [==============================] - 92s 134ms/step - loss: 1.1311\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.compile(loss=loss, optimizer=optimizer)\n",
     "hist = model.fit(dataset, epochs=30)"
@@ -592,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7d3f9050",
+   "execution_count": null,
+   "id": "c3fc91f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,21 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "713f8c16",
+   "execution_count": null,
+   "id": "6ad1919a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<start> i love you , i love you , i love you <end> '"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_text(model, tokenizer, init_sentence=\"<start> i love\", max_len=20)"
    ]
